[package]
name = "business_time_rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test = []

[dependencies]
chrono = "0.4"
chrono-tz = "0.8"
derive-getters = "0.3"
getset = "0.1"

[dev-dependencies]
rstest = "0.18"
